--- a/index.html
+++ b/index.html
@@ -22,9 +22,21 @@
     <span class="title">Your email generated:</span>
     <span id="password" class="password"></span>
     <span class="tooltip">Click to copy👌</span>
+  
+   </div>
 
+   <div class="dominio">
+    <label  for="gmail">@gmail.com</label>
+    <input type="radio" id="gmail" name="email_domain" value="@gmail.com" checked>
+  
+    <label for="hotmail">@hotmail.com</label>
+    <input type="radio" id="hotmail" name="email_domain" value="@hotmail.com">
+  
+    <label for="yahoo">@yahoo.com.br</label>
+    <input type="radio" id="yahoo" name="email_domain" value="@yahoo.com.br">
+  </div>
 
-    </div>
+    
 
     <script src="app.js"></script>
   </body>
